// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BountyAlreadyMintedMessage should match DOM Snapshot and msg "closed"  1`] = `
<div
  className="flex flex-row items-center space-x-1"
>
  <div
    className=""
  >
    Bounty is already 
    closed
    , view
     
    <span
      data-testid="link"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onTouchStart={[Function]}
    >
      here
    </span>
    .
  </div>
</div>
`;

exports[`BountyAlreadyMintedMessage should match DOM Snapshot and msg "is already minted"  1`] = `
<div
  className="flex flex-row items-center space-x-1"
>
  <div
    className=""
  >
    Bounty is already 
    minted
    , view
     
    <span
      data-testid="link"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onTouchStart={[Function]}
    >
      here
    </span>
    .
  </div>
</div>
`;
